# oslo.messaging

./: pyproject.toml  setup.cfg
oslo_messaging/: opts.py
oslo_messaging/_drivers/: impl_rabbit.py
oslo_messaging/rpc/: dispatcher.py
