[build-system]
requires = ["setuptools>=42", "wheel", "pbr"]
build-backend = "pbr.build"

[project]
name = "oslo.messaging"
version = "4.3.0+edy1"
authors = [
    {name = "OpenStack", email = "openstack-dev@lists.openstack.org"}
]
description = "Oslo Messaging API"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: OpenStack",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.6"

dependencies = [
    "pbr>=1.6",
    "futurist>=0.11.0",
    "oslo.config>=3.4.0",
    "oslo.context>=0.2.0",
    "oslo.log>=1.14.0",
    "oslo.utils>=3.4.0",
    "oslo.serialization>=1.10.0",
    "oslo.service>=1.0.0",
    "oslo.i18n>=2.1.0",
    "stevedore>=1.5.0",
    "debtcollector>=1.2.0",
    "six>=1.9.0",
    "cachetools>=1.0.0",
    "eventlet>=0.18.2",
    "greenlet>=0.3.2",
    "WebOb>=1.2.3",
    "PyYAML>=3.1.0",
    "amqp>=1.4.0",
    "kombu>=3.0.25",
    "pika>=0.10.0",
    "pika-pool>=0.1.3",
    "retrying!=1.3.0,>=1.2.3",
    "oslo.middleware>=3.0.0",
    "aioeventlet>=0.4",
    "trollius>=1.0",
]

optional-dependencies = {}

[project.entry-points."oslo.messaging.drivers"]
rabbit = "oslo_messaging._drivers.impl_rabbit:RabbitDriver"
zmq = "oslo_messaging._drivers.impl_zmq:ZmqDriver"
amqp = "oslo_messaging._drivers.protocols.amqp.driver:ProtonDriver"
kafka = "oslo_messaging._drivers.impl_kafka:KafkaDriver"
kombu = "oslo_messaging._drivers.impl_rabbit:RabbitDriver"
fake = "oslo_messaging._drivers.impl_fake:FakeDriver"
pika = "oslo_messaging._drivers.impl_pika:PikaDriver"

[project.entry-points."oslo.messaging.executors"]
aioeventlet = "oslo_messaging._executors.impl_aioeventlet:AsyncioEventletExecutor"
blocking = "oslo_messaging._executors.impl_blocking:BlockingExecutor"
eventlet = "oslo_messaging._executors.impl_eventlet:EventletExecutor"
threading = "oslo_messaging._executors.impl_thread:ThreadExecutor"

[project.entry-points."oslo.messaging.notify.drivers"]
messagingv2 = "oslo_messaging.notify.messaging:MessagingV2Driver"
messaging = "oslo_messaging.notify.messaging:MessagingDriver"
log = "oslo_messaging.notify._impl_log:LogDriver"
test = "oslo_messaging.notify._impl_test:TestDriver"
noop = "oslo_messaging.notify._impl_noop:NoOpDriver"
routing = "oslo_messaging.notify._impl_routing:RoutingDriver"

[project.entry-points."oslo.messaging.zmq.matchmaker"]
dummy = "oslo_messaging._drivers.zmq_driver.matchmaker.base:DummyMatchMaker"
redis = "oslo_messaging._drivers.zmq_driver.matchmaker.matchmaker_redis:RedisMatchMaker"

[project.entry-points."oslo.config.opts"]
"oslo.messaging" = "oslo_messaging.opts:list_opts"
